commiting progress on improvements

--- a/config_template.json
+++ b/config_template.json
@@ -3,17 +3,18 @@
 	"verbose": false,
 	"numInputs": 0,
 	"numOutputs": 0,
+	"initConnWeight": 4,
 	"numGenerations": 0,
 	"populationSize": 0,
 	"initFitness": 0.0,
 	"minimizeFitness": false,
 	"survivalRate": 0.0,
-	"stagnationLimit": 0,
-	"ratePerturb": 0.0,
-	"rateAddNode": 0.0,
-	"rateAddConn": 0.0,
-	"rateMutateChild": 0.0,
-	"distanceThreshold": 0.0,
-	"coeffUnmatching": 0.0,
-	"coeffMatching": 0.0
+	"stagnationLimit": 100,
+	"ratePerturb": 0.65,
+	"rateAddNode": 0.1,
+	"rateAddConn": 0.05,
+	"rateMutateChild": 0.25,
+	"distanceThreshold": 5,
+	"coeffUnmatching": 1,
+	"coeffMatching": 0.5
 }
